--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,14 +4,14 @@ version: 1.0.0
 publish_to: none
 environment:
   sdk: '>=2.17.0 <3.0.0'
-  
+
 dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  flutter_background: ^1.0.0
+  #  flutter_background: ^1.0.0
   flutter_webrtc:
     path: ../
   # Required for MediaRecorder example
