--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,7 +3,7 @@ description: Demonstrates how to use the webrtc plugin.
 version: 1.0.0
 publish_to: none
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   # The following adds the Cupertino Icons font to your application.
@@ -20,8 +20,12 @@ dependencies:
   http: ^0.13.3
   after_layout: ^1.1.0
   rxdart: ^0.27.2
-  orientation: ^1.3.0
-  fijkplayer: ^0.10.1
+  fijkplayer: ^0.11.0
+
+  orientation:
+    git:
+      url: git@github.com:Leagon/flutter_orientation.git
+      ref: 1.3.6
 
 dev_dependencies:
   flutter_test:
