--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
 
   orientation:
     git:
-      url: git@github.com:Leagon/flutter_orientation.git
+      url: https://github.com/Leagon/flutter_orientation.git
       ref: 1.3.6
 
 dev_dependencies:
